# aruco2

./: CMakeLists.txt  README.md  aruco.cpp  aruco.hpp  aruco2.cpp  aruco2.hpp  aruco2_fractal.cpp  aruco2_testdictspeedup.cpp  aruco_dictionary.cpp  aruco_dictionary.hpp  camera_calibration.cpp  tests.cpp
dev/: devtest1.cpp  devtest2.cpp  evaluate_detectors.cpp  plot_heatmaps.py  results_fractal.csv  results_marker.csv  results_raruco.csv  simulate_viewpoints.cpp
opencl/: aruco2detect.cl  arucodetect.cl
opencv2/objdetect/: aruco2.hpp
src/: aruco2.cpp  aruco2_dictionary.cpp  aruco2_fractal.cpp  aruco2_predefined_dictionaries_raruco.hpp  aruco_dictionary.cpp  aruco_dictionary.hpp  predefined_dictionaries_alvar.hpp
utils/: aruco2_camera_calibration.cpp  aruco2_detect_diamonds.cpp  aruco2_detect_fractal.cpp  aruco2_detect_markers.cpp  aruco2_detect_raruco.cpp  aruco2_print.cpp  cl2cpp.cmake  cl2cpp.py
